# myF1Hub

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  HYBRID_PREDICTOR_GUIDE.md  LICENSE  README.md  REPOSITORY_SETUP.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.ps1  run_app.sh  run_local.ps1  setup_env.bat  setup_env.sh  start_here.ps1
.streamlit/: config.toml  secrets.toml.example
agents/: base.py  data_agent.py  message_bus.py  model_agent.py  orchestrator.py  strategy_agent.py
app/: main.py
data/: ingest_bulk.py  ingest_data.py  ingest_data_enhanced.py  ingest_race.py  schema.sql  schema_additions.sql  schema_migration_status.sql  schema_v2.sql  schema_v3.sql
docs/: MLOPS.md  MODEL_APPROACH.md
feature_repo/: definitions.py  feature_store.yaml
models/: dynasty_engine.py  enhanced_features.py  evaluate_model.py  feature_engineering.py  hybrid_predictor.py  materialize_features.py  monitoring.py  registry.py  simulation.py  train_lap_model.py  train_model.py
notebooks/: F1_Dynasty_Engine_v7.ipynb
pipelines/: config.yaml  local_runner.py  orchestrator.py
scripts/: auto_update.py  backfill_telemetry.py  check_2024_data.py  check_2025_data.py  check_data_status.py  check_db.py  check_deployment.py  check_drivers.py  check_results_integrity.py  debug_features.py  debug_next_race.py  debug_track_map.py  emergency_ingest.py  fix_schema.py  force_train_2024.py  full_retrain.py  ingest_2025.py  reset_2025_ingestion.py  run_pipeline.py  test_hybrid_train.py
tests/: check_db_tables.py  check_gemini.py  conftest.py  debug_validation.py  sanity_check.py  test_ai_script.py  test_dynasty.py  test_hybrid_predictor.py  test_simulation_script.py  test_two_stage_prediction.py  validate_predictions.py  verify_agents.py  verify_analytics.py  verify_fixes.py
utils/: ai.py  api_config.py  availability.py  config.py  db.py  exceptions.py  logger.py  mlflow_config.py  populate_schedule.py  race_utils.py  race_visualization.py  reports.py  schemas.py  time_simulation.py  track_renderer.py
(+18 files in other folders)
